Fixed profile section on mobile

--- a/mediaqueries.css
+++ b/mediaqueries.css
@@ -19,6 +19,7 @@
 }
 
 @media screen and (max-width: 1200px) {
+
   #desktop-nav {
     display: none;
   }
@@ -29,9 +30,15 @@
   .experience-details-container {
     margin-top: 2rem;
   }
+  
   #profile,
   .section-container {
     display: block;
+  }
+  
+  .section__text{
+    display: flex;
+    flex-direction: column;
   }
   .arrow {
     display: none;
